--- a/src/App.css
+++ b/src/App.css
@@ -8,10 +8,10 @@
 }
 
 .colour-border{
-  border: 3px solid green;
+  border: 3px solid blue;
   padding: 10px;
 }
-
+ 
 .header{
   padding: 10px;
 }
